GNOME Bugzilla – Bug 640423
Too much empty space in "drawing" dialogue
Last modified: 2011-01-28 01:12:10 UTC
When showing the "drawing" dialogue the first time around, the window is pretty big, with loads of free space, when we could use a static width for the dialogue, and avoid all that empty space by calculating how big the drawing would end up.
committed!
The default dialog size is now reasonable - but resizing still plays funny games with the dialog layout. I suspect a bug in gtkvbox, but will be checking.