Proper default dialog size

https://bugzilla.gnome.org/show_bug.cgi?id=640423
At the same time, gtkvbox still doing strange things, to be continued